--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
   <section class="hero">
     <h2>Fast. Reliable. Affordable.</h2>
+    <h2>Pet Friendly Rides</h2>
     <p>Book your taxi in seconds and ride with comfort.</p>
     <a href="#booking" class="btn">Book Now</a>
   </section>
